--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <section class="gbleft">
     <h1 class="gbleft__number">185</h1>
     <span class="gbleft__text">GB Left</span>
+    <div class="gbleft__peak"></div>
   </section>
   
 </body>
