--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <span class="card2__storage__max">1000 GB</span>
     </div>
   </section>
-
-  <section class="gbleft">
-    <h1 class="gbleft__number">185</h1>
-    <span class="gbleft__text">GB Left</span>
-    <div class="gbleft__peak"></div>
-  </section>
-  
 </body>
+<footer>
+<section class="gbleft">
+  <h1 class="gbleft__number">185</h1>
+  <span class="gbleft__text">GB Left</span>
+  <div class="gbleft__peak"></div>
+</section>
+</footer>
 </html>
