--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <section class="card1">
     <img class="card1__img" src="./images/logo.svg" alt="">
     <div class="card1__main">
-      <a class="card1__main__documents" href=""></a>
-      <a class="card1__main__folder" href=""></a>
-      <a class="card1__main__upload" href=""></a>
+      <a class="card1__main__documents" href="#"></a>
+      <a class="card1__main__folder" href="#"></a>
+      <a class="card1__main__upload" href="#"></a>
     </div>
   </section>
    
